Changelog
=========

0.x.x (2011-xx-xx)
------------------

- Added some fields to Plone SEO control panel tool [fdelia]
- Added some fields to SEO tab [fdelia]
- Added viewlets for script rendering in the <head> and in the portal footer [fdelia]
- Added validation for the canonical url [fdelia]
- Added ReallyUserFriendlyTypes vocabulary [fdelia]
- Personalized view for sitemap.xml.gz generation, calculate content types that should be included [fdelia]
- Added getIncludedInSitemapxml metadata and a custom index method to access this metadata [fdelia]
- Updated sitemap.xml.gz generation view, calculate whether each object should be included, according to the getIncludedInSitemapxml metadata [fdelia]

0.1.0 (2011-07-20)
------------------

- Added Plone SEO control panel tool [fdelia]
- Added viewlet for insert meta tags in html head of pages [fdelia]
- Added view that allows to calculate html header meta tags on context [fdelia]
- Added some views that allows to calculate meta tags base on the type of context [fdelia]
- Added some methods that allows to calculate meta tags base on the page in PloneSiteRoot context [fdelia]
- Added viewlet for custom title tag rendering [fdelia]
- Added viewlet for canonical url link rendering [fdelia]
- Added handling of variables %%title%% and %%tag%% in meta tags from Plone SEO control panel tool [fdelia]
- Added object action and view for SEO tab [fdelia]
- Added handling of meta tags in SEO tab set [fdelia]