@@ -12,6 +12,7 @@ Changelog
 - Personalized view for sitemap.xml.gz generation, calculate content types that should be included [fdelia]
 - Added getIncludedInSitemapxml metadata and a custom index method to access this metadata [fdelia]
 - Updated sitemap.xml.gz generation view, calculate whether each object should be included, according to the getIncludedInSitemapxml metadata [fdelia]
+- Added validation for the priority sitemap.xml.gz [fdelia]
 
 0.1.0 (2011-07-20)
 ------------------
